# skypoint-colbert

./: .gitignore  README.md  requirements.txt
examples/: encode.py  index.py  train.py
langchain/libs/community/langchain_community/embeddings/: colbert.py
webserver/: Dockerfile  pyproject.toml
webserver/webserver/: example.py  main.py
webserver/webserver/embedding/: __init__.py  astra_db.py  colbert.py  colbert_token_embedding.py  lc_retriever.py  retriever.py  token_embedding.py
webserver/webserver/embedding/constants/: __init__.py
webserver/webserver/skypoint_colbert_embeddings/: astra_db.py  colbert_token_embedding.py  lc_retriever.py  retriever.py  token_embedding.py
webserver/webserver/skypoint_colbert_embeddings/constants/: __init__.py  constant.py
webserver/webserver/spc_colbert/: __init__.py  colbert_passage_embedding.py  retriever.py
webserver/webserver/spc_colbert/constants/: cql_queries.py
