[tool.poetry]
name = "webserver"
version = "0.1.0"
description = ""
authors = ["ming luo <itestmycode@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyarrow = "14.0.0"
torch = "2.2.0"
colbert-ai = "0.2.19"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
ragstack-ai = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
