[tool.poetry]
name = "spc-colbert"
version = "0.1.5"
description = ""
authors = ["Avi Sahney <avi.sahney@skypointcloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
torch = "^2.2.0"
colbert-ai = "^0.2.19"

[[tool.poetry.packages]]
include = "**/*"
from = "webserver"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
